Add caffeine getput benchmark results.